[package]
name = "belilo"
version = "2026.5.24"
authors = ["Inc44"]
edition = "2021"
rust-version = "1.80"
description = "A command-line tool for whitening images."
readme = "README.md"
repository = "https://github.com/Inc44/belilo"
license = "MIT"
keywords = ["image-processing", "image-optimization", "batch-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "qoi", "tga", "webp"] }
rayon = "1.12"
walkdir = "2"